# robot.bicycle

./: .gitignore  .gitmodules  ADXL345.cpp  ADXL345.h  ADXL345_reg.h  AUTHORS  BlinkThread.cpp  BlinkThread.h  BlinkThreads.cpp  BlinkThreads.h  CMakeLists.txt  Constants.h  DiscreteStateSpace.h  DiscreteStateSpace_priv.h  EncoderTimers.h  Fork.cpp  Fork.h  HMC5843.cpp  HMC5843.h  HMC5843_reg.h  ITG3200.cpp  ITG3200.h  ITG3200_reg.h  Interrupts.cpp  Interrupts.h  LICENSE  MPU6050.cpp  MPU6050.h  Makefile  PeripheralInit.cpp  PeripheralInit.h  README.md  RearWheel.cpp  RearWheel.h  RearWheel_priv.h  STM32F407xG_ram_vectors.ld  Sample.cpp  Sample.h  SampleAndControl.cpp  SampleAndControl.h  (+48 more)
analysis/: CMakeLists.txt  dataloader.cc  dataloader.h  datawrangler.cc  datawrangler.h  main.cc  mainwindow.cc  mainwindow.h  run_meta_data.h  sample.proto
board/: board.c  board.h  board.mk
cmake/Modules/: FindFFTW3.cmake  FindMatlab.cmake  FindNanopb.cmake  FindPythonModule.cmake
common/: sampleplotter.py  sampletypes.py
data/imu_calibration/: README  get_imu_data.py  phi_000_theta_000_mpu6050.npz  phi_000_theta_090_mpu6050.npz  phi_000_theta_180_mpu6050.npz  phi_000_theta_270_mpu6050.npz  phi_090_theta_000_mpu6050.npz  phi_270_theta_000_mpu6050.npz  reference_mpu6050.npz
data/physicalparameters/: README  build_postgres_database.sh  compute_model_parameters.py  create_tables.sql  dataprocessing.py  inertia_calc.py  populate_tables.sql  rear_wheel_torque_constant.py
data/physicalparameters/RawData/PeriodMeasurements/Fork/: RobotForkCompoundFirst1.mat  RobotForkCompoundFirst3.mat  RobotForkCompoundFirst4.mat  RobotForkTorsionalFourth1.mat  RobotForkTorsionalFourth4.mat  RobotForkTorsionalFourth5.mat  RobotForkTorsionalSecond1.mat  RobotForkTorsionalSecond3.mat  RobotForkTorsionalThird1.mat  RobotForkTorsionalThird4.mat  RobotForkTorsionalThird5.mat  populateTable.py
data/physicalparameters/RawData/PeriodMeasurements/Rod/: populateTable.py  (+3 more)
design/: CMakeLists.txt  ControllerGains.h.in  YawRateController_gains.cpp.in  benchmark_bicycle_linear_dynamics_vs_logspeed.npz  benchmark_bicycle_linear_dynamics_vs_speed.npz  cgains.cc.in  cgains.cpp.in  cgains.h.in  cl_pi.slx  control_design_functions.cc  control_design_functions.h  control_tools.py  controller_data.npz  controller_data.py  controller_plotter.py  derivative_filter.py  firmware_generator.cc  firmware_generator.h  firmware_template.cc  firmware_template.h  full_order_observer.cc  generate_cgains.py  linearized_yaw_rate.py  matlab_interface.cc  matlab_interface.h  parameter_check.cc  parameters.py  pi_gains.mat  reduced_order_observer.cc  reduced_order_observer.py  reduced_order_observer.tex  robot_bicycle_parameters.cc  robot_bicycle_parameters.h  robotic_bicycle_linear_dynamics_vs_logspeed.npz  robotic_bicycle_linear_dynamics_vs_speed.npz  state_space_matrices.py  subspace_control.tex  test_cg.cc  tune_pi.m  yaw_rate_controller.py
docker/: Dockerfile
firmware/: CMakeLists.txt  Constants.h  ControllerGains.h  Interrupts.cpp  MPU6050.cpp  MPU6050.h  Makefile  PeripheralInit.cpp  PeripheralInit.h  README.txt  RearWheel.cpp  RearWheel.h  RearWheel_priv.h  Sample.h  Sample.proto  SampleAndControl.cpp  SampleAndControl.h  SampleAndControl_priv.h  SystemCommands.cpp  SystemCommands.h  Test.pb.c  Test.pb.h  Test.proto  YawRateController.cpp  YawRateController.h  YawRateController_gains.cpp  YawRateController_priv.h  build.sh  build_firmware.sh  cgains.cpp  cgains.h  halconf.h  imu_calibration.cpp  imu_calibration.h  main.cpp  openocd.cfg  stm32-f4xx.cmake  textutilities.cpp  toolchain-arm-none-eabi.cmake
firmware/board/: board.c  board.h  board.mk  olimex-stm32-h407.cmake
firmware/src/: CMakeLists.txt  Constants.h  MPU6050.cpp  MPU6050.h  MPU6050_calibration.cpp  PeripheralInit.cpp  RearWheel.cpp  RearWheel.h  RearWheel_priv.h  SampleAndControl.cpp  SampleAndControl.h  SampleAndControl_priv.h  SampleBuffer.cpp  SampleBuffer.h  SampleBuffer_priv.h  SystemCommands.cpp  SystemCommands.h  SystemState.h  VectorTable.h  WriteMessage.h  YawRateController.cpp  YawRateController.h  YawRateController_gains.cpp  YawRateController_priv.h  calibration.cpp  calibration.h  chconf.h  constants.cpp  constants.h  control_loop-inl.h  control_loop.cpp  control_loop.h  encoder-inl.h  encoder.cpp  encoder.h  encoder_priv.h  filter.h  fork_motor_controller.cpp  fork_motor_controller.h  fork_schedule.cpp  (+30 more)
git_hooks/: post-checkout  post-merge
gui/: rbg_button_page.py  rbg_plot_page.py  rbg_shell.py  rbg_widgets.py  rbgui.py
inc/: SampleConverted.h  SampleReader.h
physicalparameters/RawData/PeriodMeasurements/Fork/: RobotForkCompoundFirst2.mat  RobotForkTorsionalFirst1.mat  RobotForkTorsionalFirst2.mat  RobotForkTorsionalFirst3.mat  RobotForkTorsionalFourth2.mat  RobotForkTorsionalFourth3.mat  RobotForkTorsionalSecond2.mat  RobotForkTorsionalThird2.mat  RobotForkTorsionalThird3.mat
physicalparameters/RawData/PeriodMeasurements/Frame/: RobotFrameCompoundFirst1.mat  RobotFrameCompoundFirst3.mat  RobotFrameCompoundFirst4.mat  RobotFrameTorsionalFirst2.mat  RobotFrameTorsionalFourth1.mat  RobotFrameTorsionalFourth2.mat  RobotFrameTorsionalFourth3.mat  RobotFrameTorsionalFourth4.mat  RobotFrameTorsionalSecond1.mat  RobotFrameTorsionalThird1.mat  RobotFrameTorsionalThird2.mat  RobotFrameTorsionalThird3.mat  populateTable.py
physicalparameters/RawData/PeriodMeasurements/FrontWheel/: RobotFwheelCompoundFirst1.mat  RobotFwheelCompoundFirst3.mat  RobotFwheelTorsionalFirst1.mat  RobotFwheelTorsionalFirst2.mat  populateTable.py
physicalparameters/RawData/PeriodMeasurements/RearWheel/: RobotRwheelTorsionalFirst1.mat  RobotRwheelTorsionalFirst3.mat  populateTable.py
physicalparameters/RawData/PeriodMeasurements/Rod/: UcdrodRodTorsionalFirst3.mat  UcdrodRodTorsionalFirst5.mat
plots/: Sample_pb2.py  message_np.py  plot_data.py  plot_gyro.py  plot_sample.py  sample_pb2.py
proto/: sample.proto  sample_pb2.py
scripts/: MPU6050_calibration.py  imu_calibration.py  plot_data.py  speed_controller.py
src/: CMakeLists.txt  SampleReader.cc  convertsamples.cc
(+14 files in other folders)
